# ticton-app

./: .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  tonconnect-manifest.json
app/api/: README.md  __init__.py  asset.py  core.py  leaderboard.py  provider.py  strategy.py  user.py
app/api/middleware/: auth.py
app/dao/: README.md  __init__.py  manager.py
app/dao/impl/: mongo_manager.py  redis_manger.py
app/jobs/: README.md  __init__.py  core.py  price.py
app/models/: README.md  __init__.py  common.py  core.py  funds.py  leaderboard.py  price.py  primitives.py  provider.py  strategy.py  telegram.py  ton.py  user.py
app/providers/: __init__.py  manager.py
app/providers/impl/: mongo_manager.py  redis_manger.py  scheduler_manager.py
app/settings/: README.md  __init__.py
app/tasks/: price.py
app/tools/: __init__.py
app/utils/: __init__.py
playground/: timer.py  tonproof.py
